<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="app_name">Yaniv Online</string>
    <string name="game_title">Yaniv Online</string>
    <string name="game_blurb">Final project by IA. </string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Play!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
</resources>
