<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- SIGN-IN SCREEN -->
    <LinearLayout
        android:id="@+id/screen_sign_in"
        style="@style/LLScreen">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            app:srcCompat="@drawable/yaniv_logo" />

        <TextView style="@style/GameBlurb" />

        <ImageButton
            android:id="@+id/button_single_player"
            style="@style/MainScreenButton"

            android:background="?android:selectableItemBackground"
            android:src="@drawable/but_single"
            android:text="@string/single_player" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout
        android:id="@+id/screen_main"
        style="@style/LLScreen">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/yaniv_logo" />

        <ImageButton
            android:id="@+id/button_single_player_2"
            style="@style/MainScreenButton"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/but_single"
            android:text="@string/single_player" />
        />

        <!-- <TextView
        style="@style/MainScreenButtonBlurb"
        android:text="@string/single_player_explanation" /> -->

        <ImageButton
            android:id="@+id/button_quick_game"
            style="@style/MainScreenButton"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/but_quick_game"
            android:text="@string/quick_game" />

        <!--  <TextView
        style="@style/MainScreenButtonBlurb"
        android:text="@string/quick_game_explanation" />-->

        <ImageButton
            android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/but_create_game"
            android:text="@string/invite_players" />

        <!--   <TextView
        style="@style/MainScreenButtonBlurb"
        android:text="@string/invite_players_explanation" />-->

        <ImageButton
            android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/but_see_invite"
            android:text="@string/see_invitations" />

        <!--  <TextView
        style="@style/MainScreenButtonBlurb"
        android:text="@string/see_invitations_explanation" /> -->

        <ImageButton
            android:id="@+id/button_sign_out"
            style="@style/SignOutButton"

            android:layout_weight="100"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/but_sign_out"
            android:text="@string/sign_out" />
    </LinearLayout>

<!-- INVITATION POPUP -->
    <LinearLayout
        android:id="@+id/invitation_popup"
        style="@style/InvPopup">

        <TextView
            android:id="@+id/incoming_invitation_text"
            style="@style/InvPopupText" />

        <Button
            android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout
        android:id="@+id/screen_wait"
        style="@style/LLScreen">

        <TextView
            style="@style/Blurb"
            android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout
        android:id="@+id/screen_game"
        style="@style/LLScreen"
        android:elevation="1dp"
        android:longClickable="false"
        android:visibility="visible">

        <TextView
            android:id="@+id/turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/card_deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Card Deck" />

        <TextView
            android:id="@+id/primary_deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Card Deck" />

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/my_score"
            style="@style/ScoreDisplay" />

        <Button
            android:id="@+id/button_click_me"
            style="@style/GameButton"
            android:layout_marginBottom="20dp"
            android:text="@string/click_me" />

        <TextView
            android:id="@+id/countdown"
            style="@style/FigureLabel" />

        <LinearLayout
            style="@style/ScoresBox"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/score0"
                style="@style/ScoreText"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/score1"
                style="@style/ScoreText"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/score2"
                style="@style/ScoreText"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/score3"
                style="@style/ScoreText"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
